<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginScreenFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_top"
        android:hint="@string/login_hint"
        app:helperText="@string/login_helper_text"
        app:layout_constraintBottom_toTopOf="@id/loginSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/edit_text_width_percent"
        app:startIconDrawable="@drawable/ic_baseline_account_box_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/loginSpace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        app:layout_constraintBottom_toTopOf="@id/passwordInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="@string/password_helper_text"
        app:layout_constraintBottom_toTopOf="@id/passwordSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginSpace"
        app:layout_constraintWidth_percent="@dimen/edit_text_width_percent"
        app:startIconDrawable="@drawable/ic_baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/passwordSpace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        app:layout_constraintBottom_toTopOf="@id/passwordSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:text="@string/registration_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/forgotPasswordButton"
        app:layout_constraintEnd_toStartOf="@id/enterButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordSpace" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/forgotPasswordButton"
        app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/registrationButton"
        app:layout_constraintTop_toBottomOf="@id/passwordSpace" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPasswordButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/forgot_password_button_text_size"
        app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/registrationButton" />

    <FrameLayout
        android:id="@+id/progressLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/forgotPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>